--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
             <div class="header-content">
                 <img src="jerin.jpg" alt="Your Profile Picture" class="Profile-picture">
                 <h1>Jerin</h1>
-                <p>Passionate on teaching</p>
+                <p>Passionate on student</p>
             </div>
         </header>
         <nav>
@@ -97,7 +97,7 @@
         <section id="about">
             <div class="section-content">
                 <h2>About Me</h2>
-                <p>Hello Everyone! This is  jerin and i am a Computer Science Student.</p>
+                <p>Hello Everyone! This is  Jerin and i am a Computer Science Student.</p>
             </div>
         </section>
         <section id="education">
@@ -136,7 +136,7 @@
             </center>
         </section>
         <footer>
-            <p>&copy; 2023 Shejin</p>
+            <p>&copy; 2023 jerin</p>
         </footer>
         <script>
             document.querySelectorAll('a[href^="#"]').forEach(anchor =>{
