Update and rename jerin.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
             <div class="header-content">
                 <img src="jerin.jpg" alt="Your Profile Picture" class="Profile-picture">
                 <h1>Jerin</h1>
-                <p>Passionate on teaching</p>
+                <p>Passionate on student</p>
             </div>
         </header>
         <nav>
@@ -136,7 +136,7 @@
             </center>
         </section>
         <footer>
-            <p>&copy; 2023 Shejin</p>
+            <p>&copy; 2023 Jerin</p>
         </footer>
         <script>
             document.querySelectorAll('a[href^="#"]').forEach(anchor =>{
